typescript/checker/tests/conformance/scanner/ecmascript3/scannerES3NumericLiteral3.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/conformance/scanner/ecmascript3/scannerES3NumericLiteral3.ts:1:3
  |
1 | 01.0
  |   ^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/conformance/scanner/ecmascript3/scannerES3NumericLiteral3.ts:1:1
  |
1 | 01.0
  | ^^

